User can now navigate with hrefs rather than from URL

--- a/SubmitData/templates/SubmitData/about.html
+++ b/SubmitData/templates/SubmitData/about.html
@@ -1,5 +1,7 @@
+<!--everything from the base template-->
 {% extends "SubmitData/base.html"  %}
 
+<!--Unique content for the about page-->
 {% block content %}
     <h1>About Submit Data!</h1>
 {% endblock content %}
