--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -1,3 +1,5 @@
+<!--Loads from the static folder-->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,17 +11,61 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="{% static 'SubmitData/main.css' %}">
 
+
+<!-- Where the title can be changed. (Tab title)-->
     {%if title%}
-        <title>Django Biller - {{title}}</title>
+        <title>Billable - {{title}}</title>
     {% else %}
-        <title>Django Biller</title>
+        <title>Billable: A Financial Tracker</title>
     {% endif %}
 </head>
+<!--Navbar that allow for clicking to change pages-->
 <body>
-    <div class="container">
-        {% block content %}{% endblock %}  
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+          <div class="container">
+            <a class="navbar-brand mr-4" href="{% url 'Submit-Data' %}">Billable: A Financial Tracker</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggle">
+              <div class="navbar-nav mr-auto">
+                <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Home</a>
+                <a class="nav-item nav-link" href="{% url 'About-Submit-Data' %}">About</a>
+              </div>
+              <!-- Navbar Right Side -->
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#">Login</a>
+                <a class="nav-item nav-link" href="#">Register</a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </header>
+
+    <!--Sidebar--> 
+    <main role="main" class="container">
+    <div class="row">
+        <div class="col-md-8">
+        {% block content %}{% endblock %}
+        </div>
+        <div class="col-md-4">
+        <div class="content-section">
+            <h3>Our Sidebar</h3>
+            <p class='text-muted'>You can put any information here you'd like.
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light">Calendars</li>
+                <li class="list-group-item list-group-item-light">etc</li>
+            </ul>
+            </p>
+        </div>
+        </div>
     </div>
+    </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
