--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -1,9 +1,18 @@
+<!--everything from the base template-->
 {% extends "SubmitData/base.html"  %}
 
+<!--Unique content for the home page-->
 {% block content %}
     {% for post in posts %}
-        <h1>{{ post.title }}</h1>
-        <p>By {{post.author}} on  {{post.date_posted}}</p>
-        <p>{{post.content}}</p>
+    <article class="media content-section">
+        <div class="media-body">
+          <div class="article-metadata">
+            <a class="mr-2" href="#">{{ post.author }}</a>
+            <small class="text-muted">{{ post.date_posted }}</small>
+          </div>
+          <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+          <p class="article-content">{{ post.content }}</p>
+        </div>
+      </article>
     {% endfor %}
 {% endblock content %}
