--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,14 +1,16 @@
 <!--everything from the base template-->
 {% extends "SubmitData/base.html"  %}
+{% load crispy_forms_tags %}
 
-<!--Unique content for the about page-->
+<!--Unique content for the register page-->
 {% block content %}
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{ form.as_p }}
+                <!--Displays form as crispy style-->
+                {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
