--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,25 +2,24 @@
 {% extends "SubmitData/base.html"  %}
 {% load crispy_forms_tags %}
 
-<!--Unique content for the register page-->
+<!--Unique content for the login page-->
 {% block content %}
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Login</legend>
                 <!--Displays form as crispy style-->
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}"> Sign in</a>
+                Need An Account? <a class="ml-2" href="{% url 'register' %}"> Sign Up Now</a>
             </small>
         </div>
     </div>>
 {% endblock content %}
-
