User can create posts

--- a/SubmitData/static/SubmitData/main.css
+++ b/SubmitData/static/SubmitData/main.css
@@ -21,7 +21,7 @@ body {
   }
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #2be809;
   }
   
   .site-header .navbar-nav .nav-link.active {
