--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -32,8 +32,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'About-Submit-Data' %}">About</a>
+                <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Home</a> <!--Submit-Data-->
+                <a class="nav-item nav-link" href="{% url 'Bill-Statement' %}">Bill Statement</a>
+                
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
