--- a/SubmitData/templates/SubmitData/income.html
+++ b/SubmitData/templates/SubmitData/income.html
@@ -3,6 +3,6 @@
 
 <!--Unique content for the about page-->
 {% block content %}
-    <h1>Bill Statement</h1>
+    <h1>Income</h1>
 {% endblock content %}
 
