--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -4,7 +4,24 @@
 <!--Unique content for the home page-->
 <!--Change db fields to be shown here-->
 {% block content %}
-    {% for post in posts %}
+  {% for post in posts %}
+    <article class="media content-section">
+      <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+      <div class="media-body">
+        <div class="article-metadata">
+          <a class="mr-2" href="#">{{ post.author }}</a>
+          <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+        </div>
+        <h2><a class="article-title" href="{% url 'data-detail' post.id %}">{{ post.title }}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+      </div>
+    </article>
+  {% endfor %}
+{% endblock content %}
+
+
+
+  <!--{% for post in posts %}
     <article class="media content-section">
       <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
         <div class="media-body">
@@ -16,5 +33,5 @@
           <p class="article-content">{{ post.content }}</p>
         </div>
       </article>
-    {% endfor %}
-{% endblock content %}
+    {% endfor %}-->
+  
