Can add posts with login authentication

--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -32,8 +32,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Home</a> <!--Submit-Data-->
-                <a class="nav-item nav-link" href="{% url 'Bill-Statement' %}">Bill Statement</a>
+                <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Bill Summary</a> <!--Submit-Data-->
+                <a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a><!--Bill-Statement is original-->
                 
               </div>
               <!-- Navbar Right Side -->
