Changed the about url to BillStatement

--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -33,8 +33,8 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">Bill Summary</a> <!--Submit-Data-->
-                <a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a><!--Bill-Statement is original-->
-                
+                <a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>
+                <a class="nav-item nav-link" href="{% url 'Bill-Statement' %}">Bill Statement</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
@@ -69,16 +69,14 @@
         <div class="col-md-4">
         <div class="content-section">
             <h3>Billing Options</h3>
-            <p class='text-muted'>Access Features of the app here.
+            <p class='text-muted'>Access Features of the app here(Placeholder).
             <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Past Bills</li>
-                <li class="list-group-item list-group-item-light">Bills Due in the Future</li>
-                <!--<li class="list-group-item list-group-item-light">Calendars</li>-->
-                <!--<li class="list-group-item list-group-item-light">etc</li>-->
+                <li class="list-group-item list-group-item-light">Bills Due in the Future</li>   
             </ul>
-            </p>
-        </div>
-        </div>
+            </p> 
+        </div> 
+        </div>   
     </div>
     </main>
 
