--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -21,5 +21,5 @@
                 Need An Account? <a class="ml-2" href="{% url 'register' %}"> Sign Up Now</a>
             </small>
         </div>
-    </div>>
+    </div>
 {% endblock content %}
