--- a/SubmitData/templates/SubmitData/post_detail.html
+++ b/SubmitData/templates/SubmitData/post_detail.html
@@ -3,6 +3,8 @@
 
 <!--Unique content for the home page-->
 <!--Change db fields to be shown here-->
+
+<!--Mercedes' code-->
 {% block content %}
     <article class="media content-section">
         <!--<img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">-->
