--- a/BankInformation/templates/BankInformation/bank_display.html
+++ b/BankInformation/templates/BankInformation/bank_display.html
@@ -15,12 +15,12 @@
                 <!--<a class="mr-2" href="#">{{ banks.user }}</a>-->
                 <!--<small class="text-muted">{{ banks.date_entered|date:"F d, Y" }}</small>-->
             </div>
-            <h2 class="article-title"> <strong>{{ banks.bank_name}}</strong> </h2>
-            <p class="article-content"><strong>Nickname:</strong> {{ banks.nickname}}</p>
-            <p class="article-content"><strong>Account Type: </strong>{{ banks.account_type }}</p>
-            <p class="article-content"><strong> Bank Account Number:</strong> {{ banks.bank_acc_number }}</p>
-            <p class="article-content"><strong>Routing Number:</strong> {{ banks.routing_number }}</p>
-            <p class="article-content"><strong>Notes: {{ banks.notes }}</strong></p>
+            <h2 class="article-title"> <strong>{{ bank.bank_name}}</strong> </h2>
+            <p class="article-content"><strong>Nickname:</strong> {{ bank.nickname}}</p>
+            <p class="article-content"><strong>Account Type: </strong>{{ bank.account_type }}</p>
+            <p class="article-content"><strong> Bank Account Number:</strong> {{ bank.bank_acc_number }}</p>
+            <p class="article-content"><strong>Routing Number:</strong> {{ bank.routing_number }}</p>
+            <p class="article-content"><strong>Notes:</strong> {{ bank.notes }} </p>
             </div>
         </article>
     {% endfor %}
