--- a/SubmitData/templates/SubmitData/post_detail.html
+++ b/SubmitData/templates/SubmitData/post_detail.html
@@ -21,6 +21,7 @@
         <h2 class="article-title"> <strong>{{ object.title }}</strong> </h2>
         <p class="article-content"><strong>Company Name:</strong> {{ object.company_name }}</p>
         <p class="article-content"><strong>Bill Amount: </strong>{{ object.amount }}</p>
+        <p class="article-content"><strong>Account Number: </strong>{{ object.account_number }}</p>
         <p class="article-content"><strong> Date entered:</strong> {{ object.date_entered }}</p>
         <p class="article-content"><strong>Date incurred:</strong> {{ object.statement_date }}</p>
         <p class="article-content"><strong>Due Date: </strong>{{ object.due_date }}</p>
