Submission for debugging and backup

--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -73,7 +73,8 @@
             <p class='text-muted'>Enter Data From The Options Below
             <ul class="list-group">
                 <a class="list-group-item list-group-item-light" href="{% url 'create-data' %}">Enter A Bill</a>
-                <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter A Bank Account</a>   
+                <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter A Bank Account</a>
+                <a class="list-group-item list-group-item-light" href="{% url 'create-income' %}">Enter an Income Source</a>   
             </ul>
             </p> 
         </div> 
