--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -34,8 +34,8 @@
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">View Your Bills</a> <!--Submit-Data-->
                 <!--<a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>-->
-                <!--<a class="nav-item nav-link" href="{% url 'create-bank' %}">Enter a Bank Account</a>-->
                 <a class="nav-item nav-link" href="{% url 'view-banks' %}">View Your Banks</a>
+                <a class="nav-item nav-link" href="{% url 'view-Income' %}">View Your Income Sources</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
