--- a/IncomeInformation/templates/IncomeInformation/income_display.html
+++ b/IncomeInformation/templates/IncomeInformation/income_display.html
@@ -7,17 +7,17 @@
 {% block content %}
 <h1>Your Income</h1>
 <!--{% csrf_token %}-->
-    {% for income in incomes%}
+    {% for incomes in income%}
         <article class="media content-section">
             <!--<img class="rounded-circle article-img" src="{{ income.author.profile.image.url }}">-->
             <div class="media-body">
                 <!--<div class="article-metadata">-->
-                    <a class="mr-2" href="#">{{ income.user }}</a>
-                    <!--<small class="text-muted">{{ incomes.date_entered|date:"F d, Y" }}</small>-->
+                    <a class="mr-2" href="#">{{ incomes.user }}</a>
+                    <!--<small class="text-muted">{{ incomess.date_entered|date:"F d, Y" }}</small>-->
                 <!--</div>-->
-                <h2 class="article-title"> <strong>Source Name: </strong> {{ income.source_name }}</h2>
-                <p class="article-content"><strong>Amount: </strong> {{ income.amount }}</p>
-                <p class="article-content"><strong>Date Received: </strong>{{ income.date_received }}</p>
+                <h2 class="article-title"> <strong>Source Name: </strong> {{ incomes.source_name }}</h2>
+                <p class="article-content"><strong>Amount: </strong> {{ incomes.amount }}</p>
+                <p class="article-content"><strong>Date Received: </strong>{{ incomes.date_received }}</p>
             </div>
         </article>
     {% endfor %}
