Changes to income info model

--- a/IncomeInformation/templates/IncomeInformation/income_display.html
+++ b/IncomeInformation/templates/IncomeInformation/income_display.html
@@ -15,7 +15,7 @@
                     <a class="mr-2" href="#">{{ incomes.user }}</a>
                     <!--<small class="text-muted">{{ incomess.date_entered|date:"F d, Y" }}</small>-->
                 <!--</div>-->
-                <h2 class="article-title"> <strong>Source Name: </strong> {{ incomes.source_name }}</h2>
+                <h2 class="article-title"> <strong>Source: </strong> {{ incomes.source_name }}</h2>
                 <p class="article-content"><strong>Amount: </strong> {{ incomes.amount }}</p>
                 <p class="article-content"><strong>Date Received: </strong>{{ incomes.date_received }}</p>
             </div>
