payment method now showing on web page

--- a/BankInformation/templates/BankInformation/bank_display.html
+++ b/BankInformation/templates/BankInformation/bank_display.html
@@ -5,7 +5,7 @@
 <!--Change db fields to be shown here-->
 
 {% block content %}
-<h1>Your Bank Accounts</h1>
+<h1><strong>Your Bank Accounts</strong></h1>
 <!--{% csrf_token %}-->
     {% for bank in banks%}
         <article class="media content-section">
