--- a/IncomeInformation/templates/IncomeInformation/income_display.html
+++ b/IncomeInformation/templates/IncomeInformation/income_display.html
@@ -5,7 +5,7 @@
 <!--Change db fields to be shown here-->
 
 {% block content %}
-<h1>Your Income</h1>
+<h1><strong>Your Income</strong></h1>
 <!--{% csrf_token %}-->
     {% for incomes in income%}
         <article class="media content-section">
