--- a/SubmitData/templates/SubmitData/post_detail.html
+++ b/SubmitData/templates/SubmitData/post_detail.html
@@ -25,6 +25,7 @@
         <p class="article-content"><strong> Date entered:</strong> {{ object.date_entered }}</p>
         <p class="article-content"><strong>Date incurred:</strong> {{ object.statement_date }}</p>
         <p class="article-content"><strong>Due Date: </strong>{{ object.due_date }}</p>
+        <p class="article-content"><strong>Payment Method: </strong>{{ object.payment_method }}</p>
         <p class="article-content"><strong>Is it paid?: </strong>{{ object.is_paid }}</p>
         </div>
     </article>
