--- a/IncomeInformation/templates/IncomeInformation/income_display.html
+++ b/IncomeInformation/templates/IncomeInformation/income_display.html
@@ -1,24 +1,43 @@
 <!--everything from the base template-->
 {% extends "SubmitData/base.html"  %}
+{% load static %}
 
 <!--Unique content for the home page-->
 <!--Change db fields to be shown here-->
 
 {% block content %}
-<h1><strong>Your Income</strong></h1>
-<!--{% csrf_token %}-->
+<!--<h1><strong>Your Income</strong></h1>
+<{% csrf_token %}
     {% for incomes in income%}
         <article class="media content-section">
-            <!--<img class="rounded-circle article-img" src="{{ income.author.profile.image.url }}">-->
+            <img class="rounded-circle article-img" src="{{ income.author.profile.image.url }}">
             <div class="media-body">
-                <!--<div class="article-metadata">-->
+                <div class="article-metadata
                     <a class="mr-2" href="#">{{ incomes.user }}</a>
-                    <!--<small class="text-muted">{{ incomess.date_entered|date:"F d, Y" }}</small>-->
-                <!--</div>-->
+                    <small class="text-muted">{{ incomess.date_entered|date:"F d, Y" }}</small
+                </div
                 <h2 class="article-title"> <strong>Source: </strong> {{ incomes.source_name }}</h2>
                 <p class="article-content"><strong>Amount: </strong> {{ incomes.amount }}</p>
                 <p class="article-content"><strong>Date Received: </strong>{{ incomes.date_received }}</p>
             </div>
         </article>
-    {% endfor %}
+    {% endfor %}-->
+
+    <div>
+        <table style="width:100%">
+        <tr>
+            <th>Source</th>
+            <th>Amount</th>
+            <th>Date Received</th>
+        </tr>
+        {% for incomes in income %}
+        <tr>
+            <td><a class="mr-2" href="#">{{ incomes.source_name }}</a></td>
+            <td>{{ incomes.amount }}</td>
+            <td>{{ incomes.date_received }}</td>
+        </tr>
+        {% endfor %}
+        </table>
+    </div>
+
 {% endblock content %}
