--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -34,6 +34,8 @@
   </form>
 </div>-->
 <div>
+  <h1>Your entered bills</h1>
+  <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
   <table style="width:100%">
     <tr>
       <th>Title</th>
@@ -57,17 +59,3 @@
 </div>
 {% endblock content %}
 
-  <!--{% for post in posts %}
-    <article class="media content-section">
-      <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-        <div class="media-body">
-          <div class="article-metadata">
-            <a class="mr-2" href="#">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
-          </div>
-          <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-          <p class="article-content">{{ post.content }}</p>
-        </div>
-      </article>
-    {% endfor %}-->
-  
