Added Account Summary

--- a/SubmitData/templates/SubmitData/post_detail.html
+++ b/SubmitData/templates/SubmitData/post_detail.html
@@ -20,6 +20,13 @@
         <p class="article-content"><strong>Date incurred:</strong> {{ object.statement_date }}</p>
         <p class="article-content"><strong>Due Date: </strong>{{ object.due_date }}</p>
         <p class="article-content"><strong>Is it paid?: </strong>{{ object.is_paid }}</p>
+        <!-- Adding Optional part to this -->
+        <p class="article-content"><strong>Previous Balance:</strong> {{ object.previous_balance }}</p>
+        <p class="article-content"><strong>Payments: </strong>{{ object.payments }}</p>
+        <p class="article-content"><strong>Adjustments: </strong>{{ object.adjustment }}</p>
+        <p class="article-content"><strong>Credit: </strong>{{ object.credits }}</p>
+        <p class="article-content"><strong>Late Fees:</strong> {{ object.late_fees }}</p>
+        <p class="article-content"><strong>Interest Charges: </strong>{{ object.interest_charges }}</p>
         </div>
     </article>
 {% endblock content %}
