--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -1,6 +1,7 @@
 <!--everything from the base template-->
 {% extends "SubmitData/base.html"  %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!--Unique content for the home page-->
 <!--Change db fields to be shown here-->
@@ -25,17 +26,18 @@
 
 {% block content %}
 
-<!--<div>
-  <form method="get">
-    {{ myFilter.form }}
 
-  <button class ="btn btn-primary" type="submit">Search</button>
 
-  </form>
-</div>-->
-<div>
-  <h1>Your entered bills</h1>
-  <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
+<div class="container">
+
+  <h1>Your Entered Bills</h1>
+    <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
+  
+    <form method="GET">
+      {{ filter.form|crispy}}<br>
+      <button type="submit" class="btn btn-primary">Search</button> 
+    </form><br>
+  
   <table style="width:100%">
     <tr>
       <th>Title</th>
@@ -46,7 +48,7 @@
       <th>Due Date</th>
       <th>Is it paid?</th>
     </tr>
-    {% for post in posts %}
+    {% for post in filter.qs %}
       <tr>
         <td><a class="mr-2" href="{% url 'data-detail' post.id %}">{{ post.title }}</a></td>
         <td>{{ post.date_entered|date:"F d, Y" }}</td>
