--- a/IncomeInformation/templates/IncomeInformation/income_display.html
+++ b/IncomeInformation/templates/IncomeInformation/income_display.html
@@ -23,6 +23,7 @@
         </article>
     {% endfor %}-->
 
+    <h1>Your Income Sources</h1>
     <div>
         <table style="width:100%">
         <tr>
