--- a/SubmitData/templates/SubmitData/post_confirm_delete.html
+++ b/SubmitData/templates/SubmitData/post_confirm_delete.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Delete Post</legend>
-                <h2>Are you sure you want to delete this bill: "{{ object.title }}"</h2>
+                <h2>Are you sure you want to delete this bill: "{{ object.title }}" It will be gone forever!<br></h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-danger" type="submit">Yes, Delete this bill</button>
