--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -59,7 +59,7 @@
         <td>{{ post.is_paid }}</td>
       </tr>
     {% endfor %}
-    </table>
+    </table><br>
 </div>
 {% endblock content %}
 
