--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -75,7 +75,7 @@
                 <a class="list-group-item list-group-item-light" href="{% url 'create-data' %}">Enter A Bill</a>
                 <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter A Bank Account</a>
                 <a class="list-group-item list-group-item-light" href="{% url 'create-income' %}">Enter an Income Source</a>
-                <a class="list-group-item list-group-item-light" href="{% url 'view-summaries' %}">Create Monthly Summaries</a>   
+                <!--<a class="list-group-item list-group-item-light" href="{% url 'view-summaries' %}">Create Monthly Summaries</a>-->   
             </ul>
             </p> 
         </div> 
