minor fixes to filter

--- a/SubmitData/templates/SubmitData/summaries.html
+++ b/SubmitData/templates/SubmitData/summaries.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-<h3>Create Summaries Here <br> <!--Or <br> Not Paid at all--> </h3>
+<h3>Create Monthly/Yearly Summaries Here <br> <!--Or <br> Not Paid at all--> </h3>
 
 <h4>
   <p><small>Today's Date Is: <span id="datetime"></span></small></p>
@@ -18,7 +18,7 @@
   </script>
 </h4>
 
-<p><strong>The date format must be in DD/MM/YYYY</strong></p>
+<p><strong>The date format must be in DD/MM/YYYY or YYYY/MM/DD</strong></p>
 
 <div>
     <form method="GET">
