--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -12,7 +12,7 @@
 
   <h1>Your Entered Bills</h1>
     <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
-    <h5><a class="nav-item nav-link" href="{% url 'view-summaries' %}">Create Monthly Summaries</a></h5>
+    <h5><a class="nav-item nav-link" href="{% url 'view-summaries' %}">Create Monthly/Yearly Summaries Here</a></h5>
   
     <form method="GET">
       {{ filter.form|crispy}}<br>
