--- a/SubmitData/templates/SubmitData/summaries.html
+++ b/SubmitData/templates/SubmitData/summaries.html
@@ -18,7 +18,7 @@
   </script>
 </h4>
 
-<p><strong>The date format must be in DD/MM/YYYY or YYYY/MM/DD</strong></p>
+<p><strong>The date format must be in YYYY/MM/DD</strong></p>
 
 <div>
     <form method="GET">
