--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -26,12 +26,13 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'Submit-Data' %}">Billable: A Financial Tracker</a>
+            <a class="navbar-brand mr-4" href="{%url 'Submit-Data' %}">Billable:A Financial Tracker</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
+                <a class="nav-item nav-link" href="{% url 'calendar' %}">View Your Calendar</a>
                 <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">View Your Bills</a> <!--Submit-Data-->
                 <!--<a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>-->
                 <a class="nav-item nav-link" href="{% url 'view-banks' %}">View Your Banks</a>
