--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -73,9 +73,9 @@
             <h3>Submit Your Info</h3>
             <p class='text-muted'>Enter Data From The Options Below
             <ul class="list-group">
-                <a class="list-group-item list-group-item-light" href="{% url 'create-data' %}">Enter A Bill</a>
-                <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter A Bank Account</a>
-                <a class="list-group-item list-group-item-light" href="{% url 'create-income' %}">Enter an Income Source</a>
+                <a class="list-group-item list-group-item-light" href="{% url 'create-data' %}">Enter Bill</a>
+                <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter Bank Account</a>
+                <a class="list-group-item list-group-item-light" href="{% url 'create-income' %}">Enter Income Source</a>
                 <!--<a class="list-group-item list-group-item-light" href="{% url 'calendar' %}">Calendar</a>-->
                 <!--<a class="list-group-item list-group-item-light" href="{% url 'view-summaries' %}">Create Monthly Summaries</a>-->   
             </ul>
