--- a/cal/templates/cal/event.html
+++ b/cal/templates/cal/event.html
@@ -29,6 +29,7 @@ Event
   <table class="form form-table">
     {{ form }}
     <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Submit </button></td></tr>
+    <tr><td colspan="2"><button type="delete" class="btn btn-info right"> Delete </button></td></tr>
   </table>
 </form>
 {% endblock %}
