--- a/SubmitData/templates/SubmitData/home.html
+++ b/SubmitData/templates/SubmitData/home.html
@@ -13,7 +13,9 @@
   <h1>Your Entered Bills</h1>
     <h4><a class="nav-item nav-link" href="{% url 'is-paid' %}">View Your Unpaid Bills</a></h4>
     <h5><a class="nav-item nav-link" href="{% url 'view-summaries' %}">Create Monthly/Yearly Summaries Here</a></h5>
-  
+
+
+    <p><strong>The date format must be in YYYY/MM/DD</strong></p>
     <form method="GET">
       {{ filter.form|crispy}}<br>
       <button type="submit" class="btn btn-primary">Search</button> 
