Sprint 8 - Minimum Payment has been add to Bill Information.

--- a/SubmitData/templates/SubmitData/post_detail.html
+++ b/SubmitData/templates/SubmitData/post_detail.html
@@ -28,6 +28,7 @@
         <p class="article-content"><strong>Payment Method: </strong>{{ object.payment_method }}</p>
         <p class="article-content"><strong>Is it paid?: </strong>{{ object.is_paid }}</p>
         <p class="article-content"><strong>Previous Balance:</strong> {{ object.previous_balance }}</p>
+        <p class="article-content"><strong>Minimum Payment:</strong> {{ object.minimum_payment }}</p>
         <p class="article-content"><strong>Payments: </strong>{{ object.payments }}</p>
         <p class="article-content"><strong>Adjustments: </strong>{{ object.adjustment }}</p>
         <p class="article-content"><strong>Credit: </strong>{{ object.credits }}</p>
