Added Company Information so contact member can call customer service

--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -37,6 +37,7 @@
                 <!--<a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>-->
                 <a class="nav-item nav-link" href="{% url 'view-banks' %}">View Your Banks</a>
                 <a class="nav-item nav-link" href="{% url 'view-Income' %}">View Your Income Sources</a>
+                  <a class="nav-item nav-link" href="{% url 'view-company' %}">View Company Information</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
@@ -76,12 +77,13 @@
                 <a class="list-group-item list-group-item-light" href="{% url 'create-data' %}">Enter Bill</a>
                 <a class="list-group-item list-group-item-light" href="{% url 'create-bank' %}">Enter Bank Account</a>
                 <a class="list-group-item list-group-item-light" href="{% url 'create-income' %}">Enter Income Source</a>
+                <a class="list-group-item list-group-item-light" href="{% url 'create-company' %}">Enter Company Information</a>
                 <!--<a class="list-group-item list-group-item-light" href="{% url 'calendar' %}">Calendar</a>-->
-                <!--<a class="list-group-item list-group-item-light" href="{% url 'view-summaries' %}">Create Monthly Summaries</a>-->   
+                <!--<a class="list-group-item list-group-item-light" href="{% url 'view-summaries' %}">Create Monthly Summaries</a>-->
             </ul>
-            </p> 
-        </div> 
-        </div>   
+            </p>
+        </div>
+        </div>
     </div>
     </main>
 
