--- a/BankInformation/templates/BankInformation/bank_confirm_delete.html
+++ b/BankInformation/templates/BankInformation/bank_confirm_delete.html
@@ -1,18 +1,18 @@
-
 {% extends "SubmitData/base.html"  %}
 
 
 {% block content %}
+
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Delete Post</legend>
-                <h2>Are you sure you want to delete this bill: "{{ object.title }}" It will be gone forever!<br></h2>
+                <legend class="border-bottom mb-4">Delete Bank</legend>
+                <h2>Are you sure you want to delete this bank: <strong>"{{ object.bank_name }}"</strong> It will be gone forever!<br></h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-danger" type="submit">Yes, Delete this bill</button>
-                <a class="btn btn-outline-secondary" href="{% url 'data-detail' object.id %}">Cancel</a>
+                <a class="btn btn-outline-secondary" href="{% url 'bank-detail' banks.id %}">Cancel</a>
             </div>
         </form>
     </div>
