--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -24,7 +24,7 @@
 <!--Navbar that allow for clicking to change pages-->
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
             <a class="navbar-brand mr-4" href="{%url 'Submit-Data' %}">Billable:A Financial Tracker</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
                 <!--<a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>-->
                 <a class="nav-item nav-link" href="{% url 'view-banks' %}">View Your Banks</a>
                 <a class="nav-item nav-link" href="{% url 'view-Income' %}">View Your Income Sources</a>
-                  <a class="nav-item nav-link" href="{% url 'view-company' %}">View Company Information</a>
+                  <a class="nav-item nav-link" href="{% url 'view-companys' %}">View Company Information</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
