--- a/SubmitData/templates/SubmitData/base.html
+++ b/SubmitData/templates/SubmitData/base.html
@@ -36,7 +36,7 @@
                 <a class="nav-item nav-link" href="{% url 'Submit-Data' %}">View Your Bills</a> <!--Submit-Data-->
                 <!--<a class="nav-item nav-link" href="{% url 'create-data' %}">Enter a Bill</a>-->
                 <a class="nav-item nav-link" href="{% url 'view-banks' %}">View Your Banks</a>
-                <a class="nav-item nav-link" href="{% url 'view-Income' %}">View Your Income Sources</a>
+                <a class="nav-item nav-link" href="{% url 'view-incomes' %}">View Your Income Sources</a>
                   <a class="nav-item nav-link" href="{% url 'view-companys' %}">View Company Information</a>
               </div>
               <!-- Navbar Right Side -->
