--- a/cal/static/cal/css/styles.css
+++ b/cal/static/cal/css/styles.css
@@ -3,6 +3,10 @@ body {
   font-family: "ptsans", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+h1 h2 h3 h4 h5 h6 {
+  text-align: center;
+}
+
 .left {
   float: left;
 }
