--- a/cal/templates/cal/calendar.html
+++ b/cal/templates/cal/calendar.html
@@ -1,4 +1,5 @@
 {% extends 'cal/base.html' %}
+{% load static %}
 
 {% block title %}
 Calendar
@@ -8,6 +9,7 @@ Calendar
 <div class="clearfix">
 	<a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ prev_month }}"> Previous Month </a>
 	<a class="btn btn-info left" href="{% url 'Submit-Data' %}}"> Return to Billable </a>
+	<a class="btn btn-info left" href="{% url 'cal:list-calendar' %}">Choose Events To Delete</a>
 	<a class="btn btn-info right" href="{% url 'cal:calendar' %}?{{ next_month }}"> Next Month </a>
 	<a class="btn btn-info right" href="{% url 'cal:event_new' %}"> New Event </a>
 </div>
