--- a/cal/templates/cal/delete_view.html
+++ b/cal/templates/cal/delete_view.html
@@ -4,7 +4,7 @@
     <form method="POST">
         <!-- Security token by Django -->
         {% csrf_token %}
-        Are you want to delete this item ?
+        <h1>Are you want to delete this item ?</h1>
         <input type="submit" value="Yes" />
         <a href="/calendar">Cancel </a>
     </form>
